# ns_depature_times

./: DockerFIle  DockerFile  README.md  pyproject.toml
.github/workflows/: python-package.yml
ns_departure_times/: __main__.py  app.py  main.py
ns_departure_times/assets/: main.css
ns_departure_times/datacollection/: api.py  dataobjects.py
ns_departure_times/generate_pages/: generate_displays.py
nsdeparturetimes/: __init__.py  app.py  main.py
nsdeparturetimes/assets/: style.css
nsdeparturetimes/datacollection/: api.py
nsdeparturetimes/generate_pages/: __init__.py  generate_displays.py
nsdepaturetimes/: app.py  depatures.json
nsdepaturetimes/datacollection/: __init__.py  api.py  dataobjects.py
tests/unit/: test_dataobjects.py
